metadata/objects/Template_Map__c.object
<CustomObject>
    <fields>
        <fullName>Community_Name__c</fullName>
        <label>Community Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <label>Community</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Demo Template</label>
        <referenceTo>Org_Template__c</referenceTo>
        <relationshipLabel>Template Maps</relationshipLabel>
        <relationshipName>Template_Maps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Widget_CSS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Widget CSS</label>
        <referenceTo>Widget_Template__c</referenceTo>
        <relationshipLabel>Template Maps</relationshipLabel>
        <relationshipName>Template_Maps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Template Map</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Widget_CSS__c</columns>
        <columns>Community__c</columns>
        <columns>Demo_Template__c</columns>
        <columns>Profile__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TM-{000000}</displayFormat>
        <label>Template Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>